--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
       <a class="nav-link" href="temprature.html">TEMPERATURE <span class="sr-only">(current)</span></a>
     </li>
 
+
+    <li class="nav-item active">
+      <a class="nav-link" href="windpower.html"> POWER PREDICTION (BASED ON WIND SPEED)<span class="sr-only">(current)</span></a>
+    </li>
+
+
+
+       
+       
+
+
     <!-- <li class="nav-item active">
       <a class="nav-link" href="#"> CORDINATES<span class="sr-only">(current)</span></a>
     </li> -->
